--- a/po/ms.po
+++ b/po/ms.po
@@ -1,16 +1,16 @@
-# Spanish translation for menulibre
-# Copyright (c) 2012 Rosetta Contributors and Canonical Ltd 2012
+# Malay translation for menulibre
+# Copyright (c) 2014 Rosetta Contributors and Canonical Ltd 2014
 # This file is distributed under the same license as the menulibre package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2012.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2014.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-01-20 09:38-0500\n"
-"PO-Revision-Date: 2013-05-05 06:07+0000\n"
-"Last-Translator: Adolfo Jayme <fitoschido@gmail.com>\n"
-"Language-Team: Spanish <es@li.org>\n"
+"PO-Revision-Date: 2014-01-23 06:17+0000\n"
+"Last-Translator: abuyop <Unknown>\n"
+"Language-Team: Malay <ms@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -19,27 +19,27 @@ msgstr ""
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
-msgstr "Editor de menús"
+msgstr "Penyunting Menu"
 
 #: ../menulibre.desktop.in.h:2
 msgid "Add or remove applications from the menu"
-msgstr ""
+msgstr "Tambah atau buang aplikasi dari menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:1
 msgid "Add _Launcher"
-msgstr ""
+msgstr "Tambah _Pelancar"
 
 #: ../data/ui/MenulibreWindow.ui.h:2
 msgid "Add _Directory"
-msgstr ""
+msgstr "Tambah _Direktori"
 
 #: ../data/ui/MenulibreWindow.ui.h:3
 msgid "Add _Separator"
-msgstr ""
+msgstr "Tambah P_emisah"
 
 #: ../data/ui/MenulibreWindow.ui.h:4
 msgid "Icon Selection"
-msgstr ""
+msgstr "Pemilihan Ikon"
 
 #: ../data/ui/MenulibreWindow.ui.h:5 ../menulibre/MenulibreApplication.py:1006
 #: ../menulibre/MenulibreApplication.py:1130
@@ -48,55 +48,55 @@ msgstr ""
 #: ../menulibre/MenulibreApplication.py:2184
 #: ../menulibre/MenulibreApplication.py:2290
 msgid "Cancel"
-msgstr ""
+msgstr "Batal"
 
 #: ../data/ui/MenulibreWindow.ui.h:6
 msgid "Apply"
-msgstr ""
+msgstr "Laksana"
 
 #: ../data/ui/MenulibreWindow.ui.h:7
 msgid "Icon Name"
-msgstr "Nombre del icono"
+msgstr "Nama Ikon"
 
 #: ../data/ui/MenulibreWindow.ui.h:8
 msgid "Image File"
-msgstr "Archivo de imagen"
+msgstr "Fail Imej"
 
 #: ../data/ui/MenulibreWindow.ui.h:9
 msgid "<b>Select an image</b>"
-msgstr ""
+msgstr "<b>Pilih satu imej</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:10
 msgid "16px"
-msgstr ""
+msgstr "16px"
 
 #: ../data/ui/MenulibreWindow.ui.h:11
 msgid "32px"
-msgstr ""
+msgstr "32px"
 
 #: ../data/ui/MenulibreWindow.ui.h:12
 msgid "64px"
-msgstr ""
+msgstr "64px"
 
 #: ../data/ui/MenulibreWindow.ui.h:13
 msgid "128px"
-msgstr ""
+msgstr "128px"
 
 #: ../data/ui/MenulibreWindow.ui.h:14
 msgid "<b>Preview</b>"
-msgstr "<b>Previsualización</b>"
+msgstr "<b>Pratonton</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:15
 msgid "Select an icon..."
-msgstr ""
+msgstr "Pilih satu ikon..."
 
 #: ../data/ui/MenulibreWindow.ui.h:16
 msgid "<b>Select an icon</b>"
-msgstr ""
+msgstr "<b>Pilih satu ikon</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:17
 msgid "column"
-msgstr ""
+msgstr "lajur"
 
 #: ../data/ui/MenulibreWindow.ui.h:18 ../menulibre/MenulibreApplication.py:356
 #: ../menulibre/MenulibreApplication.py:2313
@@ -105,51 +105,51 @@ msgstr "MenuLibre"
 
 #: ../data/ui/MenulibreWindow.ui.h:19
 msgid "_File"
-msgstr "_Archivo"
+msgstr "_Fail"
 
 #: ../data/ui/MenulibreWindow.ui.h:20
 msgid "_Edit"
-msgstr "_Editar"
+msgstr "_Sunting"
 
 #: ../data/ui/MenulibreWindow.ui.h:21
 msgid "_Help"
-msgstr "Ay_uda"
+msgstr "Bant_uan"
 
 #: ../data/ui/MenulibreWindow.ui.h:22
 msgid "Save Launcher"
-msgstr ""
+msgstr "Simpan Pelancar"
 
 #: ../data/ui/MenulibreWindow.ui.h:23 ../menulibre/MenulibreApplication.py:407
 msgid "Undo"
-msgstr "Deshacer"
+msgstr "Buat Asal"
 
 #: ../data/ui/MenulibreWindow.ui.h:24 ../menulibre/MenulibreApplication.py:414
 msgid "Redo"
-msgstr "Rehacer"
+msgstr "Buat Semula"
 
 #: ../data/ui/MenulibreWindow.ui.h:25 ../menulibre/MenulibreApplication.py:421
 msgid "Revert"
-msgstr "Revertir"
+msgstr "Kembali"
 
 #: ../data/ui/MenulibreWindow.ui.h:26 ../menulibre/MenulibreApplication.py:428
 msgid "Delete"
-msgstr ""
+msgstr "Padam"
 
 #: ../data/ui/MenulibreWindow.ui.h:27
 msgid "Move Up"
-msgstr "Mover hacia arriba"
+msgstr "Alih ke Atas"
 
 #: ../data/ui/MenulibreWindow.ui.h:28
 msgid "Move Down"
-msgstr "Mover hacia abajo"
+msgstr "Alih ke Bawah"
 
 #: ../data/ui/MenulibreWindow.ui.h:29
 msgid "<big><b>Application Name</b></big>"
-msgstr "<big><b>Nombre de la aplicación</b></big>"
+msgstr "<big><b>Nama Aplikasi</b></big>"
 
 #: ../data/ui/MenulibreWindow.ui.h:30
 msgid "Application Comment"
-msgstr ""
+msgstr "Ulasan Aplikasi"
 
 #: ../data/ui/MenulibreWindow.ui.h:31
 msgid ""
@@ -164,31 +164,31 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:34
 msgid "Command"
-msgstr "Orden"
+msgstr "Perintah"
 
 #: ../data/ui/MenulibreWindow.ui.h:35
 msgid "\"Path\": The working directory to run the program in. "
-msgstr ""
+msgstr "\"Laluan\": Direktori kerja untuk jalankan program. "
 
 #: ../data/ui/MenulibreWindow.ui.h:36
 msgid "Working Directory"
-msgstr "Directorio de trabajo"
+msgstr "Direktori Kerja"
 
 #: ../data/ui/MenulibreWindow.ui.h:37
 msgid "Browse..."
-msgstr ""
+msgstr "Layar..."
 
 #: ../data/ui/MenulibreWindow.ui.h:38
 msgid "<b>Application Details</b>"
-msgstr ""
+msgstr "<b>Perincian Aplikasi</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:39
 msgid "\"Terminal\": Whether the program runs in a terminal window."
-msgstr ""
+msgstr "\"Terminal\": Sama ada program berjalan di dalam tetingkap terminal."
 
 #: ../data/ui/MenulibreWindow.ui.h:40
 msgid "Run in terminal"
-msgstr "Ejecutar en un terminal"
+msgstr "Jalan dalam terminal"
 
 #: ../data/ui/MenulibreWindow.ui.h:41
 msgid ""
@@ -202,7 +202,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:42
 msgid "Use startup notification"
-msgstr "Usar notificación de inicio"
+msgstr "Guna aplikasi permulaan"
 
 #: ../data/ui/MenulibreWindow.ui.h:43
 msgid ""
@@ -216,49 +216,51 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:44
 msgid "Hide from menus"
-msgstr "Ocultar de los menús"
+msgstr "Sembunyi dari menu"
 
 #: ../data/ui/MenulibreWindow.ui.h:45
 msgid "<b>Options</b>"
-msgstr "<b>Opciones</b>"
+msgstr "<b>Pilihan</b>"
 
 #: ../data/ui/MenulibreWindow.ui.h:46
 msgid "Add"
-msgstr ""
+msgstr "Tambah"
 
 #: ../data/ui/MenulibreWindow.ui.h:47
 msgid "Remove"
-msgstr ""
+msgstr "Buang"
 
 #: ../data/ui/MenulibreWindow.ui.h:48
 msgid "Clear"
-msgstr ""
+msgstr "Kosongkan"
 
 #: ../data/ui/MenulibreWindow.ui.h:49
 msgid "Categories"
-msgstr "Categorías"
+msgstr "Kategori"
 
 #: ../data/ui/MenulibreWindow.ui.h:50
 msgid "Show"
-msgstr "Mostrar"
+msgstr "Tunjuk"
 
 #: ../data/ui/MenulibreWindow.ui.h:51
 msgid "Name"
-msgstr "Nombre"
+msgstr "Nama"
 
 #: ../data/ui/MenulibreWindow.ui.h:52
 msgid "Actions"
-msgstr ""
+msgstr "Tindakan"
 
 #: ../data/ui/MenulibreWindow.ui.h:53
 msgid ""
 "\"GenericName\": Generic name of the application, for example \"Web "
 "Browser\". "
 msgstr ""
+"\"GenericName\": Nama generik bagi sesebuah aplikasi, contohnya \"Pelayar "
+"Sesawang\". "
 
 #: ../data/ui/MenulibreWindow.ui.h:54
 msgid "Generic Name"
-msgstr ""
+msgstr "Nama Generik"
 
 #: ../data/ui/MenulibreWindow.ui.h:55
 msgid ""
@@ -272,7 +274,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:58
 msgid "Not Shown In"
-msgstr ""
+msgstr "Tidak Ditunjukkan Didalam"
 
 #: ../data/ui/MenulibreWindow.ui.h:59
 msgid ""
@@ -286,7 +288,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:62
 msgid "Only Shown In"
-msgstr ""
+msgstr "Hanya Ditunjukkan Didalam"
 
 #: ../data/ui/MenulibreWindow.ui.h:63
 msgid ""
@@ -299,15 +301,15 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:64
 msgid "Try Exec"
-msgstr ""
+msgstr "Cuba Exec"
 
 #: ../data/ui/MenulibreWindow.ui.h:65
 msgid "\"MimeType\": The MIME type(s) supported by this application. "
-msgstr ""
+msgstr "\"JenidMime\": Jenis MIME(s) disokong oleh aplikasi ini. "
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Mimetypes"
-msgstr ""
+msgstr "Jenis Mime"
 
 #: ../data/ui/MenulibreWindow.ui.h:67
 msgid ""
@@ -319,7 +321,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:68
 msgid "Keywords"
-msgstr ""
+msgstr "Kata Kunci"
 
 #: ../data/ui/MenulibreWindow.ui.h:69
 msgid ""
@@ -329,7 +331,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:70
 msgid "Startup WM Class"
-msgstr ""
+msgstr "Kelas WM Permulaan"
 
 #: ../data/ui/MenulibreWindow.ui.h:71
 msgid ""
@@ -343,7 +345,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:72
 msgid "Hidden"
-msgstr ""
+msgstr "Tersembunyi"
 
 #: ../data/ui/MenulibreWindow.ui.h:73
 msgid ""
@@ -358,24 +360,24 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:74
 msgid "DBUS Activatable"
-msgstr ""
+msgstr "DBUS Boleh Aktif"
 
 #: ../data/ui/MenulibreWindow.ui.h:75
 msgid "Advanced"
-msgstr ""
+msgstr "Lanjutan"
 
 #: ../data/ui/MenulibreWindow.ui.h:76
 msgid "<small><i>Filename</i></small>"
-msgstr ""
+msgstr "<small><i>Nama Fail</i></small>"
 
 #: ../menulibre/__init__.py:33
 msgid "Show debug messages"
-msgstr ""
+msgstr "Tunjuk mesej nyahpepijat"
 
 #: ../menulibre/MenuEditor.py:92 ../menulibre/MenulibreApplication.py:1334
 #: ../menulibre/MenulibreApplication.py:1998
 msgid "Separator"
-msgstr ""
+msgstr "Pemisah"
 
 #. Standard Items
 #: ../menulibre/MenulibreApplication.py:58
@@ -384,19 +386,19 @@ msgstr "Multimedia"
 
 #: ../menulibre/MenulibreApplication.py:59
 msgid "Development"
-msgstr "Desarrollo"
+msgstr "Pembangunan"
 
 #: ../menulibre/MenulibreApplication.py:60
 msgid "Education"
-msgstr "Educación"
+msgstr "Pendidikan"
 
 #: ../menulibre/MenulibreApplication.py:61
 msgid "Games"
-msgstr "Juegos"
+msgstr "Permainan"
 
 #: ../menulibre/MenulibreApplication.py:62
 msgid "Graphics"
-msgstr "Gráficos"
+msgstr "Grafik"
 
 #: ../menulibre/MenulibreApplication.py:63
 msgid "Internet"
@@ -404,19 +406,19 @@ msgstr "Internet"
 
 #: ../menulibre/MenulibreApplication.py:64
 msgid "Office"
-msgstr "Oficina"
+msgstr "Pejabat"
 
 #: ../menulibre/MenulibreApplication.py:65
 msgid "Settings"
-msgstr "Configuración"
+msgstr "Tetapan"
 
 #: ../menulibre/MenulibreApplication.py:66
 msgid "System"
-msgstr "Sistema"
+msgstr "Sistem"
 
 #: ../menulibre/MenulibreApplication.py:67
 msgid "Accessories"
-msgstr "Accesorios"
+msgstr "Aksesori"
 
 #: ../menulibre/MenulibreApplication.py:68
 msgid "WINE"
@@ -425,287 +427,294 @@ msgstr "WINE"
 #. Desktop Environment
 #: ../menulibre/MenulibreApplication.py:70
 msgid "Desktop configuration"
-msgstr ""
+msgstr "Konfigurasi desktop"
 
 #: ../menulibre/MenulibreApplication.py:71
 msgid "User configuration"
-msgstr ""
+msgstr "Konfigurasi pengguna"
 
 #: ../menulibre/MenulibreApplication.py:72
 msgid "Hardware configuration"
-msgstr ""
+msgstr "Konfigurasi perkakasan"
 
 #. GNOME Specific
 #: ../menulibre/MenulibreApplication.py:74
 msgid "GNOME application"
-msgstr ""
+msgstr "Aplikasi GNOME"
 
 #: ../menulibre/MenulibreApplication.py:75
 msgid "GTK+ application"
-msgstr ""
+msgstr "Aplikasi GTK+"
 
 #: ../menulibre/MenulibreApplication.py:76
 msgid "GNOME user configuration"
-msgstr ""
+msgstr "Konfigurasi pengguna GNOME"
 
 #: ../menulibre/MenulibreApplication.py:77
 msgid "GNOME hardware configuration"
-msgstr ""
+msgstr "Konfigurasi perkakasan GNOME"
 
 #: ../menulibre/MenulibreApplication.py:78
 #: ../menulibre/MenulibreApplication.py:79
 msgid "GNOME system configuration"
-msgstr ""
+msgstr "Konfigurasi sistem GNOME"
 
 #. Xfce Specific
 #: ../menulibre/MenulibreApplication.py:81
 #: ../menulibre/MenulibreApplication.py:82
 msgid "Xfce menu item"
-msgstr ""
+msgstr "Item menu Xfce"
 
 #: ../menulibre/MenulibreApplication.py:83
 msgid "Xfce toplevel menu item"
-msgstr ""
+msgstr "Item menu aras tertinggi Xfce"
 
 #: ../menulibre/MenulibreApplication.py:84
 msgid "Xfce user configuration"
-msgstr ""
+msgstr "Konfigurasi pengguna Xfce"
 
 #: ../menulibre/MenulibreApplication.py:85
 msgid "Xfce hardware configuration"
-msgstr ""
+msgstr "Konfigurasi perkakasan Xfce"
 
 #: ../menulibre/MenulibreApplication.py:86
 #: ../menulibre/MenulibreApplication.py:87
 msgid "Xfce system configuration"
-msgstr ""
+msgstr "Konfigurasi sistem Xfce"
 
 #: ../menulibre/MenulibreApplication.py:135
 #: ../menulibre/MenulibreApplication.py:174
 msgid "Other"
-msgstr "Otros"
+msgstr "Lain-lain"
 
 #: ../menulibre/MenulibreApplication.py:378
 msgid "Add _Launcher..."
-msgstr ""
+msgstr "Tambah Pe_lancar..."
 
 #: ../menulibre/MenulibreApplication.py:379
 msgid "Add Launcher..."
-msgstr ""
+msgstr "Tambah Pelancar..."
 
 #: ../menulibre/MenulibreApplication.py:385
 msgid "Add _Directory..."
-msgstr ""
+msgstr "Tambah _Direktori..."
 
 #: ../menulibre/MenulibreApplication.py:386
 msgid "Add Directory..."
-msgstr ""
+msgstr "Tambah Direktori..."
 
 #: ../menulibre/MenulibreApplication.py:392
 msgid "_Add Separator..."
-msgstr ""
+msgstr "T_ambah Pemisah..."
 
 #: ../menulibre/MenulibreApplication.py:393
 msgid "Add Separator..."
-msgstr ""
+msgstr "Tambah Pemisah..."
 
 #: ../menulibre/MenulibreApplication.py:399
 msgid "_Save"
-msgstr ""
+msgstr "_Simpan"
 
 #: ../menulibre/MenulibreApplication.py:400
 #: ../menulibre/MenulibreApplication.py:1007
 #: ../menulibre/MenulibreApplication.py:1385
 msgid "Save"
-msgstr "Guardar"
+msgstr "Simpan"
 
 #: ../menulibre/MenulibreApplication.py:406
 msgid "_Undo"
-msgstr ""
+msgstr "Buat _Asal"
 
 #: ../menulibre/MenulibreApplication.py:413
 msgid "_Redo"
-msgstr ""
+msgstr "Buat _Semula"
 
 #: ../menulibre/MenulibreApplication.py:420
 msgid "_Revert"
-msgstr ""
+msgstr "_Kembali Semula"
 
 #: ../menulibre/MenulibreApplication.py:427
 msgid "_Delete"
-msgstr ""
+msgstr "Pa_dam"
 
 #: ../menulibre/MenulibreApplication.py:434
 msgid "_Quit"
-msgstr ""
+msgstr "_Keluar"
 
 #: ../menulibre/MenulibreApplication.py:435
 #: ../menulibre/MenulibreApplication.py:2265
 msgid "Quit"
-msgstr ""
+msgstr "Keluar"
 
 #: ../menulibre/MenulibreApplication.py:441
 msgid "_Contents"
-msgstr "Índ_ice"
+msgstr "_Kandungan"
 
 #: ../menulibre/MenulibreApplication.py:442
 #: ../menulibre/MenulibreApplication.py:2263
 msgid "Help"
-msgstr ""
+msgstr "Bantuan"
 
 #: ../menulibre/MenulibreApplication.py:448
 msgid "_About"
-msgstr ""
+msgstr "_Perihal"
 
 #: ../menulibre/MenulibreApplication.py:449
 #: ../menulibre/MenulibreApplication.py:2264
 msgid "About"
-msgstr ""
+msgstr "Perihal"
 
 #. Create a new column.
 #: ../menulibre/MenulibreApplication.py:561
 msgid "Search Results"
-msgstr "Resultados de la búsqueda"
+msgstr "Hasil Gelintar"
 
 #: ../menulibre/MenulibreApplication.py:786
 msgid "ThisEntry"
-msgstr ""
+msgstr "MasukanIni"
 
 #: ../menulibre/MenulibreApplication.py:804
 msgid "Select a category"
-msgstr ""
+msgstr "Pilih satu kategori"
 
 #: ../menulibre/MenulibreApplication.py:807
 msgid "Category Name"
-msgstr ""
+msgstr "Nama Kategori"
 
 #: ../menulibre/MenulibreApplication.py:812
 msgid "Description"
-msgstr ""
+msgstr "Keterangan"
 
 #: ../menulibre/MenulibreApplication.py:891
 msgid "This Entry"
-msgstr ""
+msgstr "Masukan Ini"
 
 #: ../menulibre/MenulibreApplication.py:946
 msgid "New Shortcut"
-msgstr "Acceso rápido nuevo"
+msgstr "Pintasan Baharu"
 
 #. Unsaved changes
 #: ../menulibre/MenulibreApplication.py:996
 msgid "Do you want to save the changes before closing?"
-msgstr ""
+msgstr "Anda mahu simpan perubahan yang dibuat sebelum menutup?"
 
 #: ../menulibre/MenulibreApplication.py:997
 msgid "If you don't save the launcher, all the changes will be lost.'"
 msgstr ""
+"Jika anda tidak simpan pelancar, semua perubahan yang dibuat akan hilang."
 
 #: ../menulibre/MenulibreApplication.py:1004
 #: ../menulibre/MenulibreApplication.py:1382
 msgid "Save Changes"
-msgstr ""
+msgstr "Simpan Perubahan"
 
 #: ../menulibre/MenulibreApplication.py:1005
 #: ../menulibre/MenulibreApplication.py:1383
 msgid "Don't Save"
-msgstr ""
+msgstr "Jangan Simpan"
 
 #: ../menulibre/MenulibreApplication.py:1127
 msgid "Select an image"
-msgstr ""
+msgstr "Pilih satu imej"
 
 #: ../menulibre/MenulibreApplication.py:1131
 #: ../menulibre/MenulibreApplication.py:1238
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: ../menulibre/MenulibreApplication.py:1230
 msgid "Select a working directory..."
-msgstr ""
+msgstr "Pilih satu direktori kerja..."
 
 #: ../menulibre/MenulibreApplication.py:1234
 msgid "Select an executable..."
-msgstr ""
+msgstr "Pilih satu bolehlaku..."
 
 #: ../menulibre/MenulibreApplication.py:1373
 msgid "Do you want to save the changes before leaving this launcher?"
 msgstr ""
+"Anda mahu simpan perubahan yang dibuat sebelum meninggalkan pelancar ini?"
 
 #: ../menulibre/MenulibreApplication.py:1375
 msgid "If you don't save the launcher, all the changes will be lost."
 msgstr ""
+"Jika anda tidak simpan pelancar, semua perubahan yang dibuat akan hilang."
 
 #: ../menulibre/MenulibreApplication.py:1576
 msgid "You do not have permission to delete this file."
-msgstr ""
+msgstr "Anda tidak mempunyai keizinan memadam fail ini."
 
 #: ../menulibre/MenulibreApplication.py:1928
 msgid "New Launcher"
-msgstr ""
+msgstr "Pelancar Baharu"
 
 #: ../menulibre/MenulibreApplication.py:1966
 msgid "New Directory"
-msgstr ""
+msgstr "Direktori Baharu"
 
 #: ../menulibre/MenulibreApplication.py:2179
 msgid "Are you sure you want to restore this launcher?"
-msgstr ""
+msgstr "Anda pasti mahu pulihkan pelancar ini?"
 
 #: ../menulibre/MenulibreApplication.py:2185
 #: ../menulibre/MenulibreApplication.py:2186
 msgid "Restore Launcher"
-msgstr ""
+msgstr "Pulih Pelancar"
 
 #: ../menulibre/MenulibreApplication.py:2187
 msgid ""
 "All changes since the last saved state will be lost and cannot be restored "
 "automatically."
 msgstr ""
+"Semua perubahan semenjak keadaan tersimpan terakhir akan hilang dan tidak "
+"dapat dipulihkan secara automatik."
 
 #: ../menulibre/MenulibreApplication.py:2202
 msgid "Are you sure you want to delete this separator?"
-msgstr ""
+msgstr "Anda pasti mahu memadam pemisah ini?"
 
 #: ../menulibre/MenulibreApplication.py:2205
 #, python-format
 msgid "Are you sure you want to delete \"%s\"?"
-msgstr ""
+msgstr "Anda pasti ingin memadam \"%s\"?"
 
 #: ../menulibre/MenulibreApplication.py:2207
 msgid "This cannot be undone."
-msgstr ""
+msgstr "Ini tidak boleh dikembalikan seperti sebelum."
 
 #: ../menulibre/MenulibreApplication.py:2285
 msgid "Do you want to read the MenuLibre manual online?"
-msgstr ""
+msgstr "Anda mahu baca panduan atas-talian MenuLibre?"
 
 #: ../menulibre/MenulibreApplication.py:2291
 msgid "Read Online"
-msgstr ""
+msgstr "Baca Atas Talian"
 
 #: ../menulibre/MenulibreApplication.py:2292
 msgid "Online Documentation"
-msgstr ""
+msgstr "Dokumentasi Talian"
 
 #: ../menulibre/MenulibreApplication.py:2293
 msgid ""
 "You will be redirected to the documentation website where the help pages are "
 "maintained."
 msgstr ""
+"Anda akan diarah-semula ke laman sesawang dokumentasi dimana laman bantuan "
+"diselenggara."
 
 #. Populate the AboutDialog with all the relevant details.
 #: ../menulibre/MenulibreApplication.py:2312
 msgid "About MenuLibre"
-msgstr ""
+msgstr "Perihal MenuLibre"
 
 #: ../menulibre/MenulibreApplication.py:2315
 msgid "Copyright © 2012-2014 Sean Davis"
-msgstr ""
+msgstr "Hakcipta © 2012-2014 Sean Davis"
 
 #: ../menulibre/MenulibreXdg.py:46
 msgid "New Menu Item"
-msgstr "Elemento de menú nuevo"
+msgstr "Item Menu Baharu"
 
 #: ../menulibre/MenulibreXdg.py:48
 msgid "A small descriptive blurb about this application."
-msgstr "Una pequeña propaganda descriptiva sobre esta aplicación."
+msgstr "Merupakan blurb keterangan kecil mengenai aplikasi ini."
