--- a/po/de.po
+++ b/po/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: menulibre\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2014-02-16 09:15-0500\n"
-"PO-Revision-Date: 2014-02-17 23:17+0000\n"
+"PO-Revision-Date: 2014-02-23 23:31+0000\n"
 "Last-Translator: Tobias Bannert <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2014-02-18 05:39+0000\n"
-"X-Generator: Launchpad (build 16916)\n"
+"X-Launchpad-Export-Date: 2014-02-24 05:59+0000\n"
+"X-Generator: Launchpad (build 16926)\n"
 
 #: ../menulibre.desktop.in.h:1
 msgid "Menu Editor"
@@ -326,7 +326,7 @@ msgstr ""
 
 #: ../data/ui/MenulibreWindow.ui.h:65
 msgid "\"MimeType\": The MIME type(s) supported by this application. "
-msgstr ""
+msgstr "»MimeType«: Von der Anwendung unterstützte MIME-Typen. "
 
 #: ../data/ui/MenulibreWindow.ui.h:66
 msgid "Mimetypes"
